# OOP_03_lab

./: .gitignore  CMakeLists.txt  README.md  cbuild.sh
include/: figure.h  figure_array.h  point.h  rectangle.h  square.h  trapezoid.h
src/: figure.cpp  figure_array.cpp  main.cpp  point.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
tests/: test_figures.cpp
